--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>Kapcsolat</title>
 </head>
 <body>
-    
+    <h1>Itt tudsz elérmni minket</h1>
+    <ol>
+        <li>Telefon: 015664525351</li>
+        <li>Email: asdasd@gmail.com</li>
+        <li>Szemékyesen: Budapest VIII. Kerület</li>
+    </ol>
+    <img src="./img/letöltés.png" alt="Nyolcker">
 </body>
 </html>
