--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+
+
+    <footer>
+        <p class="fst-italic">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, vel reprehenderit nesciunt
+            necessitatibus, totam explicabo qui provident fugiat odit quos, praesentium unde. Ipsam nisi accusamus porro
+            adipisci debitis autem voluptas?</p>
+    </footer>
 </body>
+
 </html>
