--- a/footer.html
+++ b/footer.html
@@ -12,9 +12,13 @@
 
 
     <footer>
-        <p class="fst-italic">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, vel reprehenderit nesciunt
+
+        <p class="fst-italic m-2 p-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, vel reprehenderit
+            nesciunt
             necessitatibus, totam explicabo qui provident fugiat odit quos, praesentium unde. Ipsam nisi accusamus porro
             adipisci debitis autem voluptas?</p>
+
+            <h1>Várunk szeretettel!</h1>
     </footer>
 </body>
 
