--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -7,6 +7,31 @@
     <title>Kapcsolat</title>
 </head>
 <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+        <a class="navbar-brand" href="#">Weboldal</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Főoldal</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="rolunk.html">Rólunk</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="kapcsolat.html">Kapcsolat</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="orvosok.html">Orvosok</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
     <h1>Itt tudsz elérmni minket</h1>
     <ol>
         <li>Telefon: 015664525351</li>
@@ -14,5 +39,6 @@
         <li>Szemékyesen: Budapest VIII. Kerület</li>
     </ol>
     <img src="./img/letöltés.png" alt="Nyolcker">
+    
 </body>
 </html>
