--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+     <h1 class="fst-bold  text-center py-3">Fogászat</h1>
+
+     <p class="fst-italic m-2 p-2">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus molestias unde sint necessitatibus alias, provident eligendi rerum asperiores placeat aperiam. Porro, nisi reiciendis impedit obcaecati cum aliquid. Ratione, nihil minus?
+     </p>
+
+     <img src="" alt="">
 </body>
 </html>
