--- a/rolunk.html
+++ b/rolunk.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>rólunk</title>
 </head>
+
 <body>
-    
+    <h1>Rólunk es multunk</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quam, iure itaque temporibus architecto ratione,
+        magnam molestias modi, aliquid velit nesciunt. Fugiat, laboriosam itaque dicta voluptas dolores quos voluptate
+        culpa.
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet distinctio illum ea sint id! A ab ad deserunt
+        temporibus magnam, facilis neque aliquid est voluptas cumque tempore explicabo consectetur? Voluptatibus?</p>
+        <img src="./img/letöltés.jpg" alt="Fogaszat">
+
 </body>
+
 </html>
