--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
      <h1 class="fst-bold  text-center py-3">Fogászat</h1>
 
      <p class="fst-italic m-2 p-2">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus molestias unde sint necessitatibus alias, provident eligendi rerum asperiores placeat aperiam. Porro, nisi reiciendis impedit obcaecati cum aliquid. Ratione, nihil minus?
+         Fogászatunk a hét midnennapján üzemmel!
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum dolore optio necessitatibus, molestias sit voluptatibus hic excepturi praesentium tempore reiciendis consequuntur temporibus consequatur minima, debitis nulla illum dolorum architecto magni.
      </p>
 
      <img src="" alt="">
