--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>Fogászat</title>
 </head>
 <body>
      <h1 class="fst-bold  text-center py-3">Fogászat</h1>
 
      <p class="fst-italic m-2 p-2">
-         Fogászatunk a hét midnennapján üzemmel!
+         <strong>Fogászatunk a hét midnennapján üzemmel!</strong>
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum dolore optio necessitatibus, molestias sit voluptatibus hic excepturi praesentium tempore reiciendis consequuntur temporibus consequatur minima, debitis nulla illum dolorum architecto magni.
      </p>
-
+     
      <img src="" alt="">
 </body>
 </html>
