--- a/orvosok.html
+++ b/orvosok.html
@@ -38,5 +38,14 @@
     <li>tomi</li>
 </ol>
 <img src="/img/cmed-fogaszat-block.jpg" alt="Fogaszat2">
+    <footer>
+
+        <p class="fst-italic m-2 p-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, vel reprehenderit
+            nesciunt
+            necessitatibus, totam explicabo qui provident fugiat odit quos, praesentium unde. Ipsam nisi accusamus porro
+            adipisci debitis autem voluptas?</p>
+
+            <h1>Várunk szeretettel!</h1>
+    </footer>
 </body>
 </html>
