--- a/rolunk.html
+++ b/rolunk.html
@@ -42,7 +42,15 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet distinctio illum ea sint id! A ab ad deserunt
         temporibus magnam, facilis neque aliquid est voluptas cumque tempore explicabo consectetur? Voluptatibus?</p>
         <img src="./img/letöltés.jpg" alt="Fogaszat">
+    <footer>
 
+        <p class="fst-italic m-2 p-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, vel reprehenderit
+            nesciunt
+            necessitatibus, totam explicabo qui provident fugiat odit quos, praesentium unde. Ipsam nisi accusamus porro
+            adipisci debitis autem voluptas?</p>
+
+            <h1>Várunk szeretettel!</h1>
+    </footer>
 </body>
 
 </html>
