--- a/index.html
+++ b/index.html
@@ -41,5 +41,14 @@
      </p>
      
      <img src="/img/fogaszat05.jpg" alt="Fogaszat1">
+         <footer>
+
+        <p class="fst-italic m-2 p-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, vel reprehenderit
+            nesciunt
+            necessitatibus, totam explicabo qui provident fugiat odit quos, praesentium unde. Ipsam nisi accusamus porro
+            adipisci debitis autem voluptas?</p>
+
+            <h1>Várunk szeretettel!</h1>
+    </footer>
 </body>
 </html>
