--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -39,6 +39,14 @@
         <li>Szemékyesen: Budapest VIII. Kerület</li>
     </ol>
     <img src="./img/letöltés.png" alt="Nyolcker">
-    
+        <footer>
+
+        <p class="fst-italic m-2 p-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, vel reprehenderit
+            nesciunt
+            necessitatibus, totam explicabo qui provident fugiat odit quos, praesentium unde. Ipsam nisi accusamus porro
+            adipisci debitis autem voluptas?</p>
+
+            <h1>Várunk szeretettel!</h1>
+    </footer>
 </body>
 </html>
