--- a/orvosok.html
+++ b/orvosok.html
@@ -32,6 +32,11 @@
         </div>
     </div>
 </nav>
+<ol>
+    <li>david</li>
+    <li>patrik</li>
+    <li>tomi</li>
+</ol>
 <img src="/img/cmed-fogaszat-block.jpg" alt="Fogaszat2">
 </body>
 </html>
