--- a/rolunk.html
+++ b/rolunk.html
@@ -9,6 +9,31 @@
 </head>
 
 <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+        <a class="navbar-brand" href="#">Weboldal</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Főoldal</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="rolunk.html">Rólunk</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="kapcsolat.html">Kapcsolat</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="orvosok.html">Orvosok</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
     <h1>Rólunk es multunk</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quam, iure itaque temporibus architecto ratione,
         magnam molestias modi, aliquid velit nesciunt. Fugiat, laboriosam itaque dicta voluptas dolores quos voluptate
